# gfret

./: .gitignore  Cargo.toml  KEYS.md  Makefile  README.md  REALEASE_NOTES.md  RELEASE_NOTES.md  \  build.rs  config.mk  deny.toml  eog
.cargo/: config
data/: org.hitchhiker_linux.gfret.gschema.xml
po/: messages.pot
src/: backend.rs  cli.rs  cli.yaml  config.rs  convert.rs  error.rs  lib.rs  main.rs  style.css  template.rs
src/actions/: keys.rs  mod.rs
src/application/: imp.rs  mod.rs
src/cli/: mod.rs  opts.rs
src/gui/: adjustments.rs  file.rs  gui.ui  mod.rs  ui.glade
src/gui/actions/: keys.rs  mod.rs
src/gui/dialogs/: mod.rs  prefs.ui
src/gui/prefs/: appchooser.rs  mod.rs  prefs.ui
src/preferences/: imp.rs  mod.rs  preferences.ui
src/theme_switcher/: imp.rs  mod.rs  theme_switcher.ui
src/window/: gfret_window.ui  imp.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
