[package]
name = "gfret"
version = "2.2.0"
edition = "2021"
description = "Generates an svg template of a musical instrument fretboard"
authors = ["Nathan Fisher"]
repository = "https://codeberg.org/jeang3nie/gfret"
homepage = "https://jeang3nie.codeberg.page"
keywords = ["graphics", "design", "vector-graphics", "lutherie"]
categories = ["graphics", "multimedia::images", "mathematics", "simulation"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
svg = "0.10"
toml = "0.5"
clap = "3.2"

[dependencies.adw]
#version = "0.1"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"
package = "libadwaita"
features = ["dox", "v1_2"]

[dependencies.fretboard_layout]
#version = "~0.3"
git = "https://codeberg.org/jeang3nie/fretboard-layout"
features = ["gdk", "pango"]

[dependencies.gtk]
version = "*"
package = "gtk4"
#[dependencies.gtk]
#version = "0.4"
#package = "gtk4"

[dependencies.gdk]
version = "*"
package = "gdk4"

[dependencies.pango]
version = "*"
package = "pango"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
codegen-units = 1
lto = true
strip = true
