[package]
name = "gfret"
version = "3.0.0"
edition = "2021"
description = "Generates an svg template of a musical instrument fretboard"
authors = ["Nathan Fisher"]
repository = "https://codeberg.org/jeang3nie/gfret"
homepage = "https://jeang3nie.codeberg.page"
keywords = ["graphics", "design", "vector-graphics", "lutherie"]
categories = ["graphics", "multimedia::images", "mathematics", "simulation"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13"
toml = "0.7"
clap = "4.1"

[dependencies.adw]
version = "0.3"
package = "libadwaita"
features = ["v1_2"]

[dependencies.fretboard_layout]
version = "0.6"
features = ["gdk", "pango"]

[dependencies.gettext]
version = "0.7"
package = "gettext-rs"
features = ["gettext-system"]

[dependencies.gtk]
version = "0.6"
package = "gtk4"

[dependencies.gdk]
version = "0.6"
package = "gdk4"

[dependencies.pango]
version = "0.17"
package = "pango"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
codegen-units = 1
lto = true
strip = true
